@@ -1,0 +1,15 @@
+/**
+ * This file is distributed under the GPL
+ * $Id$
+ */
+
+package net.bnubot.core;
+
+/**
+ * @author sanderson
+ *
+ */
+public interface AcceptOrDecline {
+	public void accept() throws Exception;
+	public void decline() throws Exception;
+}
